# prgen

./: .gitignore  README.md  git_reader.py  pyproject.toml  requirements.txt
prgen/: classifier.py  cli.py  generator.py  git_reader.py  guards.py  models.py
