[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prgen"
version = "0.1.0"
description = "Deterministic pull request description generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Shaurya" }
]

dependencies = [
  "typer>=0.9.0",
  "pydantic>=2.0"
]

[project.scripts]
prgen = "prgen.cli:app"
